--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>My cool Website!</h1>
+    <h1 style="color:red;"> My cool Website!</h1>
 </body>
 </html>
